<resources>
    <string name="app_name">SaltStudioAndroid</string>

    //Walktrough Activity
    <string name="cd_image">Img</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_desc">Studio game yang berawal dari hobi</string>
    <string name="about_copyrights">Angga Puja Restu Prakasa © %1$d</string>


    //Admin Section

    //Login Activity
    <string name="admin_login">Login</string>
    <string name="admin_adminlogin">Admin Login</string>
    <string name="admin_hint_email">E-mail</string>
    <string name="admin_hint_password">Password</string>

    //Admin Menu
    <string name="admin_addssbutton">Add Salt Studio Game</string>
    <string name="admin_title">Admin Menu</string>
    <string name="admin_addbutton">Add Shop Game</string>

    //Add Activity
    <string name="add_addbtn">Add</string>
    <string name="add_game_pict">Select Game Image</string>
    <string name="add_game_platform">Platform</string>
    <string name="add_game_price">Rp. </string>
    <string name="add_game_name">Game name</string>

    //Game XML
    <string name="list_nama_game">Show Name Game</string>
    <string name="list_platform_game">Show Platform</string>
    <string name="list_harga_game">Show Price</string>
    <string name="list_buybtn">Buy</string>

    //Home Activity
    <string name="home_tv_desc">
        We are group of College Student Who Passionate About Making Games
    </string>
    <string name="home_tv_title">Salt Studio</string>
    <string name="home_tv_list">Our Games :</string>
    <string name="home_nama_rmd">Rumah Makan Delivery</string>
    <string name="home_platform_game">Android</string>
    <string name="home_checkbtn">Check</string>
    <string name="untitled">" "</string>
    <string name="upcoming">Upcoming</string>

    //RMD Activity
    <string name="rmd_nama">Rumah Makan Delivery</string>
    <string name="rmd_desc">Game casual yang mengajarkan anak-anak tentang makanan tradisional di beberapa daerah di Indonesia</string>
    <string name="rmd_jdltrailer">Trailer</string>
    <string name="rmd_jdldownload">Download</string>
    <string name="rmd_jdlplatform">Platform</string>
    <string name="shop_tv_title">Buy Games</string>

</resources>