<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Menu.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/home_tv_title"
            android:text="@string/home_tv_title"
            android:layout_width="wrap_content"
            android:textColor="@color/SaltStudioColor"
            android:textStyle="bold"
            android:layout_height="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginEnd="@dimen/dimen10"
            android:textSize="@dimen/font32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/home_tv_desc"
            android:text="@string/home_tv_desc"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen10"
            android:textSize="@dimen/font18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/home_tv_list"
            android:text="@string/home_tv_list"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen10"
            android:textSize="@dimen/font18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_tv_desc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>