<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dimen20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/list_img_game"
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:layout_marginStart="@dimen/dimen10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                android:contentDescription="@string/cd_image" />

            <TextView
                android:id="@+id/list_nama_game"
                android:layout_width="@dimen/dimen200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30"
                android:text="@string/list_nama_game"
                android:textSize="@dimen/font24"
                android:ellipsize="marquee"
                android:layout_marginStart="@dimen/dimen5"
                app:layout_constraintStart_toEndOf="@id/list_img_game"
                app:layout_constraintTop_toTopOf="parent"
                android:singleLine="true" />

            <TextView
                android:id="@+id/list_platform_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_platform_game"
                android:layout_marginTop="@dimen/dimen4"
                android:textSize="@dimen/font16"
                android:layout_marginStart="@dimen/dimen5"
                app:layout_constraintStart_toEndOf="@id/list_img_game"
                app:layout_constraintTop_toBottomOf="@id/list_nama_game" />

            <TextView
                android:id="@+id/list_harga_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_harga_game"
                android:layout_marginTop="@dimen/dimen4"
                android:layout_marginStart="@dimen/dimen5"
                android:textSize="@dimen/font16"
                app:layout_constraintStart_toEndOf="@id/list_img_game"
                app:layout_constraintTop_toBottomOf="@id/list_platform_game" />

            <androidx.cardview.widget.CardView
                android:id="@+id/list_buybtn"
                android:layout_width="70dp"
                android:layout_height="@dimen/dimen45"
                android:layout_margin="@dimen/dimen5"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/SaltStudioColor"
                app:cardCornerRadius="@dimen/dimen15"
                app:cardElevation="@dimen/dimen20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/list_harga_game"
                app:layout_constraintTop_toBottomOf="@+id/list_platform_game"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/buybtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_buybtn"
                        android:textColor="@android:color/background_light"
                        android:textSize="@dimen/font20"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>